# Kenji

./: CMakeLists.txt  README.md
backup/: packet_ms.cpp  packet_ms.h
src/: akashiutils.h  aoclient.cpp  aoclient.h  area_data.cpp  area_data.h  command_extension.cpp  command_extension.h  config_manager.cpp  crypto_helper.h  db_manager.cpp  db_manager.h  discord.cpp  ipidutils.cpp  ipidutils.h  main.cpp  music_manager.cpp  music_manager.h  packets.cpp  playerstateobserver.cpp  playerstateobserver.h  server.cpp  server.h  serverpublisher.cpp  serverpublisher.h  testimony_recorder.cpp
src/client/: clienthandshakeprocessor.cpp  clienthandshakeprocessor.h  clientprocessor.cpp  clientprocessor.h  clientsessionprocessor.cpp  clientsessionprocessor.h
src/commands/: area.cpp  authentication.cpp  casing.cpp  command_helper.cpp  messaging.cpp  moderation.cpp  music.cpp  roleplay.cpp
